<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#626c7f"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/setting_person"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_person_yes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:text="@string/app_name"
            android:textColor="#ecf0f1"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_user"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/user"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user"
            android:textColor="#ecf0f1"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/user_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/setting"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@+id/setting_user"
            android:singleLine="true"
            android:text="Aaron"
            android:textColor="#ecf0f1"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_sex"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignLeft="@+id/user_user"
        android:layout_below="@+id/user_user"
        android:weightSum="100"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/setting_user"
            android:layout_below="@+id/setting_user"
            android:layout_gravity="center"
            android:text="@string/setting_sex"
            android:textColor="#ecf0f1"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/user_tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:text="男"
            android:layout_weight="15"
            android:textColor="#ecf0f1"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_height_weight"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignLeft="@+id/user_user"
        android:layout_below="@+id/user_sex"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting_height"
            android:textColor="#ecf0f1"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/user_tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:text="177"
            android:textColor="#ecf0f1"
            android:textSize="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/setting_weight"
            android:textColor="#ecf0f1"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/user_tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:text="177"
            android:textColor="#ecf0f1"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_ages_fvc"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignLeft="@+id/user_user"
        android:layout_below="@+id/user_height_weight"
        android:layout_marginTop="16dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting_ages"
            android:textColor="#ecf0f1"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/user_tv_ages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:text="20"
            android:textColor="#ecf0f1"
            android:textSize="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/setting_fvc"
            android:textColor="#ecf0f1"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/user_tv_fvc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:text="4700mL"
            android:textColor="#ecf0f1"
            android:textSize="20dp" />

    </LinearLayout>


    //没车的时候不可见 有车的时候可见

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/user_ages_fvc"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        android:background="#ecf0f1"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/user_have_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_user"
        android:layout_below="@+id/user_ages_fvc"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/user_car_kind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_kind"
            android:textColor="#ecf0f1"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/user_car_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_car_kind"
            android:layout_marginTop="16dp"
            android:text="@string/car_power"
            android:textColor="#ecf0f1"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/user_car_displacement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_car_power"
            android:layout_marginTop="16dp"
            android:text="@string/car_displacement"
            android:textColor="#ecf0f1"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/user_car_weight"
            android:text="重量"
            android:textSize="20dp"
            android:textColor="#ecf0f1"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/user_car_displacement"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/user_car_tv_kind"
            android:textSize="20dp"
            android:textColor="#ecf0f1"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/user_car_kind"
            android:layout_marginLeft="24dp"
            android:layout_alignTop="@id/user_car_kind"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/user_car_tv_power"
            android:textSize="20dp"
            android:textColor="#ecf0f1"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/user_car_kind"
            android:layout_marginLeft="24dp"
            android:layout_alignTop="@id/user_car_power"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/user_car_tv_displacement"
            android:textSize="20dp"
            android:textColor="#ecf0f1"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/user_car_kind"
            android:layout_marginLeft="24dp"
            android:layout_alignTop="@id/user_car_displacement"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/user_car_tv_weight"
            android:textSize="20dp"
            android:textColor="#ecf0f1"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/user_car_kind"
            android:layout_marginLeft="24dp"
            android:layout_alignTop="@id/user_car_weight"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/user_sure"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/user_have_car"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/icon_user_modify" />
</RelativeLayout>